[Fix] (ENG-141): Avatar - Recompute width issue when tag and horizontal alignment styling hook (#1136)
* Fix-ABC-ENG-141-Add-Styling-Hook-Media-Object-Width

* Fix-ENG-141-Recompute-Overflow-Threshold

* Fix-ENG-141-Rename-Width-100-Class

* Fix-ENG-141-Resize-On-Content-Update

* Fix-ENG-141-Wrapper-Element-Null-Check

* Fix-ENG-141-Update-Visible-Items

--- a/src/modules/base/avatar/avatar.css
+++ b/src/modules/base/avatar/avatar.css
@@ -47,3 +47,7 @@
     margin-left: -0.5rem;
     --avonni-chip-container-color-border: transparent;
 }
+
+.avonni-avatar__media-object_width-100 {
+    --avonni-media-object-sizing-width: 100%;
+}
